--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -92,7 +92,9 @@
     <ClInclude Include="psiclient.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="sessioninfo.h" />
+    <ClInclude Include="sshconnection.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="systemproxysettings.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tstring.h" />
     <ClInclude Include="vpnconnection.h" />
@@ -104,10 +106,12 @@
     <ClCompile Include="httpsrequest.cpp" />
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="sessioninfo.cpp" />
+    <ClCompile Include="sshconnection.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="systemproxysettings.cpp" />
     <ClCompile Include="vpnconnection.cpp" />
     <ClCompile Include="vpnlist.cpp" />
     <ClCompile Include="vpnmanager.cpp" />
