--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="systemproxysettings.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tstring.h" />
+    <ClInclude Include="usersettings.h" />
     <ClInclude Include="vpnconnection.h" />
     <ClInclude Include="vpnlist.h" />
     <ClInclude Include="webbrowser.h" />
@@ -113,6 +114,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="systemproxysettings.cpp" />
+    <ClCompile Include="usersettings.cpp" />
     <ClCompile Include="vpnconnection.cpp" />
     <ClCompile Include="vpnlist.cpp" />
     <ClCompile Include="webbrowser.cpp" />
