Created transport-refactor branch

--- a/src/psiclient.vcxproj.filters
+++ b/src/psiclient.vcxproj.filters
@@ -33,6 +33,7 @@
     <ClCompile Include="3rdParty\zlib\zutil.c">
       <Filter>zlib</Filter>
     </ClCompile>
+    <ClCompile Include="transport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -81,6 +82,7 @@
     <ClInclude Include="3rdParty\zlib\zutil.h">
       <Filter>zlib</Filter>
     </ClInclude>
+    <ClInclude Include="transport.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
