--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="systemproxysettings.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="transport.h" />
     <ClInclude Include="tstring.h" />
     <ClInclude Include="usersettings.h" />
     <ClInclude Include="vpnconnection.h" />
@@ -152,6 +153,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="systemproxysettings.cpp" />
+    <ClCompile Include="transport.cpp" />
     <ClCompile Include="usersettings.cpp" />
     <ClCompile Include="vpnconnection.cpp" />
     <ClCompile Include="vpnlist.cpp" />
