--- a/src/psiclient.vcxproj.filters
+++ b/src/psiclient.vcxproj.filters
@@ -34,6 +34,7 @@
       <Filter>zlib</Filter>
     </ClCompile>
     <ClCompile Include="transport.cpp" />
+    <ClCompile Include="vpntransport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -83,6 +84,7 @@
       <Filter>zlib</Filter>
     </ClInclude>
     <ClInclude Include="transport.h" />
+    <ClInclude Include="vpntransport.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
