--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -104,13 +104,13 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="sessioninfo.h" />
     <ClInclude Include="sshconnection.h" />
+    <ClInclude Include="sshtransport.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="systemproxysettings.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="transport.h" />
     <ClInclude Include="tstring.h" />
     <ClInclude Include="usersettings.h" />
-    <ClInclude Include="vpnconnection.h" />
     <ClInclude Include="vpnlist.h" />
     <ClInclude Include="vpntransport.h" />
     <ClInclude Include="webbrowser.h" />
@@ -149,6 +149,7 @@
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="sessioninfo.cpp" />
     <ClCompile Include="sshconnection.cpp" />
+    <ClCompile Include="sshtransport.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -156,7 +157,6 @@
     <ClCompile Include="systemproxysettings.cpp" />
     <ClCompile Include="transport.cpp" />
     <ClCompile Include="usersettings.cpp" />
-    <ClCompile Include="vpnconnection.cpp" />
     <ClCompile Include="vpnlist.cpp" />
     <ClCompile Include="vpntransport.cpp" />
     <ClCompile Include="webbrowser.cpp" />
