--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="systemproxysettings.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="transport.h" />
+    <ClInclude Include="transport_registry.h" />
     <ClInclude Include="tstring.h" />
     <ClInclude Include="usersettings.h" />
     <ClInclude Include="vpnlist.h" />
@@ -154,6 +155,7 @@
     </ClCompile>
     <ClCompile Include="systemproxysettings.cpp" />
     <ClCompile Include="transport.cpp" />
+    <ClCompile Include="transport_registry.cpp" />
     <ClCompile Include="usersettings.cpp" />
     <ClCompile Include="vpnlist.cpp" />
     <ClCompile Include="vpntransport.cpp" />
