--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -53,7 +53,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions);JSON_IS_AMALGAMATION</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>3rdParty\zlib;json</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>3rdParty\zlib;3rdParty\json;3rdParty\hyperlink</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -70,7 +70,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions);JSON_IS_AMALGAMATION</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>3rdParty\zlib;json</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>3rdParty\zlib;3rdParty\json;3rdParty\hyperlink</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -86,6 +86,9 @@
     <None Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="3rdParty\hyperlink\hyperlink.h" />
+    <ClInclude Include="3rdParty\json\forwards.h" />
+    <ClInclude Include="3rdParty\json\json.h" />
     <ClInclude Include="3rdParty\zlib\crc32.h" />
     <ClInclude Include="3rdParty\zlib\inffast.h" />
     <ClInclude Include="3rdParty\zlib\inffixed.h" />
@@ -98,8 +101,6 @@
     <ClInclude Include="connectionmanager.h" />
     <ClInclude Include="embeddedvalues.h" />
     <ClInclude Include="httpsrequest.h" />
-    <ClInclude Include="json\forwards.h" />
-    <ClInclude Include="json\json.h" />
     <ClInclude Include="local_proxy.h" />
     <ClInclude Include="psiclient.h" />
     <ClInclude Include="Resource.h" />
@@ -119,6 +120,14 @@
     <ClInclude Include="worker_thread.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="3rdParty\hyperlink\hyperlink.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="3rdParty\json\jsoncpp.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="3rdParty\zlib\adler32.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -145,10 +154,6 @@
     </ClCompile>
     <ClCompile Include="connectionmanager.cpp" />
     <ClCompile Include="httpsrequest.cpp" />
-    <ClCompile Include="json\jsoncpp.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
-    </ClCompile>
     <ClCompile Include="local_proxy.cpp" />
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="serverlist.cpp" />
