--- a/src/psiclient.vcxproj.filters
+++ b/src/psiclient.vcxproj.filters
@@ -9,9 +9,6 @@
     <ClCompile Include="systemproxysettings.cpp" />
     <ClCompile Include="usersettings.cpp" />
     <ClCompile Include="webbrowser.cpp" />
-    <ClCompile Include="json\jsoncpp.cpp">
-      <Filter>json</Filter>
-    </ClCompile>
     <ClCompile Include="3rdParty\zlib\adler32.c">
       <Filter>zlib</Filter>
     </ClCompile>
@@ -38,6 +35,12 @@
     <ClCompile Include="local_proxy.cpp" />
     <ClCompile Include="utilities.cpp" />
     <ClCompile Include="worker_thread.cpp" />
+    <ClCompile Include="3rdParty\json\jsoncpp.cpp">
+      <Filter>json</Filter>
+    </ClCompile>
+    <ClCompile Include="3rdParty\hyperlink\hyperlink.cpp">
+      <Filter>hyperlink</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -53,12 +56,6 @@
     <ClInclude Include="tstring.h" />
     <ClInclude Include="usersettings.h" />
     <ClInclude Include="webbrowser.h" />
-    <ClInclude Include="json\forwards.h">
-      <Filter>json</Filter>
-    </ClInclude>
-    <ClInclude Include="json\json.h">
-      <Filter>json</Filter>
-    </ClInclude>
     <ClInclude Include="3rdParty\zlib\crc32.h">
       <Filter>zlib</Filter>
     </ClInclude>
@@ -91,6 +88,15 @@
     <ClInclude Include="local_proxy.h" />
     <ClInclude Include="utilities.h" />
     <ClInclude Include="worker_thread.h" />
+    <ClInclude Include="3rdParty\json\forwards.h">
+      <Filter>json</Filter>
+    </ClInclude>
+    <ClInclude Include="3rdParty\json\json.h">
+      <Filter>json</Filter>
+    </ClInclude>
+    <ClInclude Include="3rdParty\hyperlink\hyperlink.h">
+      <Filter>hyperlink</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
@@ -105,6 +111,9 @@
     </Filter>
     <Filter Include="zlib">
       <UniqueIdentifier>{41e9db18-683d-474f-89e2-b80064cd2d5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="hyperlink">
+      <UniqueIdentifier>{6a49cf0f-538c-4783-90c6-46788d2f137f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
