Added stub ServerRequest files, with a comment describing the plan

--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="psiclient.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="serverlist.h" />
+    <ClInclude Include="server_request.h" />
     <ClInclude Include="sessioninfo.h" />
     <ClInclude Include="sshtransport.h" />
     <ClInclude Include="stdafx.h" />
@@ -152,6 +153,7 @@
     <ClCompile Include="local_proxy.cpp" />
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="serverlist.cpp" />
+    <ClCompile Include="server_request.cpp" />
     <ClCompile Include="sessioninfo.cpp" />
     <ClCompile Include="sshtransport.cpp" />
     <ClCompile Include="stdafx.cpp">
