--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="connectionmanager.h" />
     <ClInclude Include="embeddedvalues.h" />
     <ClInclude Include="httpsrequest.h" />
+    <ClInclude Include="limitsingleinstance.h" />
     <ClInclude Include="local_proxy.h" />
     <ClInclude Include="psiclient.h" />
     <ClInclude Include="Resource.h" />
