--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -239,7 +239,7 @@
     <ClInclude Include="psiclient.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="serverlist.h" />
-    <ClInclude Include="server_entry_authentication.h" />
+    <ClInclude Include="server_entry_auth.h" />
     <ClInclude Include="server_request.h" />
     <ClInclude Include="sessioninfo.h" />
     <ClInclude Include="sshtransport.h" />
@@ -290,7 +290,7 @@
     <ClCompile Include="local_proxy.cpp" />
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="serverlist.cpp" />
-    <ClCompile Include="server_entry_authentication.cpp" />
+    <ClCompile Include="server_entry_auth.cpp" />
     <ClCompile Include="server_request.cpp" />
     <ClCompile Include="sessioninfo.cpp" />
     <ClCompile Include="sshtransport.cpp" />
