--- a/src/psiclient.vcxproj.filters
+++ b/src/psiclient.vcxproj.filters
@@ -44,6 +44,7 @@
     <ClCompile Include="htmldlg.cpp">
       <Filter>WebCtrl</Filter>
     </ClCompile>
+    <ClCompile Include="server_list_reordering.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -506,6 +507,7 @@
     <ClInclude Include="htmldlg.h">
       <Filter>WebCtrl</Filter>
     </ClInclude>
+    <ClInclude Include="server_list_reordering.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
