Refactored system for signaling when stops (of various kinds) are required. This code should behave equivalently to the previous code. The change was prompted by a bug where the application would be busy for a long time if plonk died during connection (right after polipo came up); this buggy behaviour is not fixed yet, but it should now be fixable.

--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -246,6 +246,7 @@
     <ClInclude Include="sessioninfo.h" />
     <ClInclude Include="sshtransport.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="stopsignal.h" />
     <ClInclude Include="systemproxysettings.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="transport.h" />
@@ -302,6 +303,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="stopsignal.cpp" />
     <ClCompile Include="systemproxysettings.cpp" />
     <ClCompile Include="transport.cpp" />
     <ClCompile Include="transport_connection.cpp" />
