--- a/src/psiclient.vcxproj.filters
+++ b/src/psiclient.vcxproj.filters
@@ -45,6 +45,7 @@
       <Filter>WebCtrl</Filter>
     </ClCompile>
     <ClCompile Include="server_list_reordering.cpp" />
+    <ClCompile Include="stopsignal.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -508,6 +509,7 @@
       <Filter>WebCtrl</Filter>
     </ClInclude>
     <ClInclude Include="server_list_reordering.h" />
+    <ClInclude Include="stopsignal.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
