--- a/src/psiclient2012.vcxproj
+++ b/src/psiclient2012.vcxproj
@@ -237,6 +237,7 @@
     <ClInclude Include="httpsrequest.h" />
     <ClInclude Include="limitsingleinstance.h" />
     <ClInclude Include="local_proxy.h" />
+    <ClInclude Include="wininet_network_check.h" />
     <ClInclude Include="psiclient.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="serverlist.h" />
@@ -292,6 +293,9 @@
     <ClCompile Include="htmldlg.cpp" />
     <ClCompile Include="httpsrequest.cpp" />
     <ClCompile Include="local_proxy.cpp" />
+    <ClCompile Include="wininet_network_check.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="serverlist.cpp" />
     <ClCompile Include="server_entry_auth.cpp" />
