Added some user group information and fixed a problem with the YAML output

--- a/src/psiclient2012.vcxproj
+++ b/src/psiclient2012.vcxproj
@@ -295,6 +295,7 @@
     <ClCompile Include="local_proxy.cpp" />
     <ClCompile Include="wininet_network_check.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="psiclient.cpp" />
     <ClCompile Include="serverlist.cpp" />
