--- a/src/psiclient.vcxproj
+++ b/src/psiclient.vcxproj
@@ -290,7 +290,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="authenticated_data_package.cpp.cpp" />
+    <ClCompile Include="authenticated_data_package.cpp" />
     <ClCompile Include="connectionmanager.cpp" />
     <ClCompile Include="diagnostic_info.cpp" />
     <ClCompile Include="htmldlg.cpp" />
