--- a/src/psiclient2012.vcxproj.filters
+++ b/src/psiclient2012.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="wininet_network_check.cpp" />
     <ClCompile Include="diagnostic_info.cpp" />
     <ClCompile Include="authenticated_data_package.cpp" />
+    <ClCompile Include="meek.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="3rdParty\cryptopp\3way.h" />
@@ -208,6 +209,7 @@
     <ClInclude Include="wininet_network_check.h" />
     <ClInclude Include="diagnostic_info.h" />
     <ClInclude Include="authenticated_data_package.h" />
+    <ClInclude Include="meek.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
